<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/editmeeting"
        android:textColor="@color/darkFont"
        android:textSize="30sp" >
    </TextView>

    <TextView
        android:id="@+id/DescriptionTextAnchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="Meeting Description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editMeetingDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DescriptionTextAnchor"
        android:layout_below="@+id/DescriptionTextAnchor"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/timeTitleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DescriptionTextAnchor"
        android:layout_below="@+id/editDatePicker1"
        android:layout_marginTop="5dp"
        android:text="Time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <TimePicker
        android:id="@+id/editTimePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DescriptionTextAnchor"
        android:layout_below="@+id/timeTitleEdit"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/button1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:onClick="cancelEditMeeting"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginBottom="28dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:onClick="deleteMeeting"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button3"
            android:layout_alignBottom="@+id/button3"
            android:layout_marginBottom="28dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="acceptEditMeeting"
            android:text="@string/ok" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/editDatePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editMeetingDesc"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/editDateTitle1" />

    <TextView
        android:id="@+id/editDateTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editMeetingDesc"
        android:layout_below="@+id/editMeetingDesc"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:text="Date" />

</RelativeLayout>